tests/test_input_files/good/test_good_if_stmt_5.punkt
main {
    const x = 1.
    if x == 1 {
        print "test".
    }
    if x == 1 {
        print "test".
    }
    if x == 1 {
        print "test".
    }
    if x == 1 {
        print "test".
    }
    if x == 1 {
        print "test".
    }
    if x == 1 {
        print "test".
    }
    if x == 1 {
        print "test".
    }
    if x == 1 {
        print "test".
    }
    if x == 1 {
        print "test".
    }
    if x == 1 {
        print "test".
    }
    if x == 1 {
        print "test".
    }
    if x == 1 {
        print "test".
    }
    if x == 1 {
        print "test".
    }
}
