tests/test_input_files/bad/test_bad_if_stmt_4.punkt
main {
	const x = 1.
	if x {
		println "hello".
	}
}
